# experimenta-ml-kiro

./: .gitignore  PROGRAM.md  PROMPT.md  README.md  RECIPES.md  TODO.md  experiment.py  experimenta-execute.sh  mission.yaml  pyproject.toml
.kiro/agents/: ml-clarify.json  ml-experiment.json  ml-plan.json
docs/: ARCHITECTURE.md  IDEATION.md  OVERVIEW.md
ml_agent/: __init__.py  evaluator.py  mission.py  profiler.py  recipe.py  tracker.py  utils.py
tests/: test_evaluator.py  test_mission.py  test_profiler.py  test_recipe.py  test_tracker.py
